# Course_Django

./: .gitignore  README.md  manage.py  pyproject.toml
Course_Django/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
my_work/: admin.py  forms.py  models.py  services.py  urls.py  views.py
my_work/migrations/: 0001_initial.py  0002_alter_client_options_alter_newsletter_options.py
my_work/utils/: client_foo.py  index_foo.py  log_foo.py  message_foo.py  newsletter_foo.py
templates/blog/: blog_delete.html  blog_detail.html  blog_list.html  blog_update.html
templates/client/: client_delete.html  client_detail.html  client_list.html
templates/log/: log_detail.html
templates/messages/: message_delete.html  message_detail.html  message_form.html  messaje_list.html
templates/my_work/: base.html  contact.html  index.html
templates/my_work/client/: client_delete.html  client_detail.html  client_form.html  client_list.html
templates/my_work/includes/: inc_menu.html
templates/my_work/log/: log_detail.html  log_list.html
templates/my_work/messages/: message_delete.html  message_detail.html  message_form.html  messaje_list.html
templates/my_work/newsletter/: newsletter_delete.html  (+4 more)
templates/newsletter/: newsletter_list.html
templates/user/: email_confirm.html  login.html  register.html  user_form.html  verify_email.html  verify_sent.html
user/: form.py  models.py  urls.py  utils.py  views.py
user/migrations/: 0001_initial.py
(+5 files in other folders)
